[tool.poetry]
name = "study-algorithm"
version = "0.1.0"
description = ""
authors = ["hyunchan-jung <tmzkdlqmfn1@naver.com>"]
readme = "README.md"
packages = [{include = "study_algorithm"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
